# remem

./: .gitignore  AGENTS.md  AGENT_USAGE.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  README.zh-CN.md  SECURITY.md  SPEC-audit-remediation-2026-05-29.md  SPEC-benchmark.md  SPEC-eval.md  SPEC-growth.md  SPEC-memory-library-hardening-2026-05-16.md  SPEC-memory-system-v2-no-compat-2026-05-08.md  SPEC-memory-system-v2.1-revisions-2026-05-08.md  SPEC-observation-drain-scheduler-2026-05-05.md  SPEC-step11-timeline-split-2026-04-01.md  SPEC-step12-api-split-2026-04-01.md  SPEC-step13-doctor-split-2026-04-01.md  SPEC-step14-preference-split-2026-04-01.md  SPEC-step15-workstream-split-2026-04-01.md  SPEC-step17-memory-promote-split-2026-04-01.md  SPEC-step20-cli-actions-split-2026-04-01.md  SPEC-step21-query-expand-split-2026-04-01.md  SPEC-step23-eval-local-split-2026-04-01.md  SPEC-step25-adapter-claude-split-2026-04-01.md  SPEC-step26-memory-service-split-2026-04-01.md  SPEC-step27-observe-split-2026-04-01.md  SPEC-step28-db-pending-split-2026-04-01.md  SPEC-step29-pending-admin-split-2026-04-01.md  SPEC-step30-temporal-split-2026-04-01.md  SPEC-step31-db-job-split-2026-04-01.md  SPEC-step32-ai-split-2026-04-01.md  SPEC-step33-install-split-2026-04-01.md  SPEC-step34-memory-search-split-2026-04-01.md  SPEC-step35-claude-memory-split-2026-04-01.md  SPEC-step38-eval-metrics-split-2026-04-01.md  (+13 more)
.agents/plugins/: marketplace.json
.audit/: findings.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: epic.yml  implementation.yml  memory_capture_bug.yml  spec.yml
.github/workflows/: auto-release.yml  ci.yml  closure-audit.yml  pages.yml  release.yml  sensitive-governance.yml
.remem/: dream-cluster-failure-isolation.md
assets/: demo-recall.tape  demo.tape
checks/: check_workflow.py  schema_contract.py  specrail-sync.lock.json
docs/: ARCHITECTURE.md  analysis-letta-filesystem-locomo.md  audit-2026-05-29.md  audit-2026-06-19.md  audit-2026-07-09.md  competitive-analysis.md  context-budget-design-2026-04-29.md  graph-contract.md  memory-lifecycle.md  memory-systems-comparison.md  memory-usage-guide.md  procedural-memory.md  release-lifecycle.md  seo-audit-2026-06-19.md  sessionstart-context-smoke.md  spec-autodream.md  spec-codex-context-injection-gating-2026-05-25.md  spec-codex-plugin-complete-design.md  spec-context-compiler.md  spec-memory-ai-config.md  spec-memory-governance-v2.md  spec-memory-ownership-routing.md  spec-status-health-performance.md  temporal-facts.md  todo.md  workstream-design.md  zero-llm-redesign.md
docs/adr/: 2026-06-12-graph-decision-gate.md  2026-07-09-graph-gate-associative-followup.md
docs/bug/: save-memory-local-doc-2026-03-04.md  token-waste-2026-02-21.md
docs/invi/: 00-final-design.md  01-mem0-extraction.md  02-zep-knowledge-graph.md  03-letta-core-memory.md  04-cursor-context.md  05-augment-memory.md  06-langmem-dual-channel.md  07-engram-progressive-disclosure.md  08-academic-memory-extraction.md  09-rewind-capture-summary.md  09-rewind-capture.md  10-notion-findings.md  10-notion-knowledge-summary.md  10-notion-knowledge.md  README.md
docs/maintenance/: file-size-debt.md
docs/marketing/: seo-audit-2026-06-19.md
docs/qa/: remem_feature_user_stories.csv
eval/: README.md  golden.json
prompts/: compress.txt  dream.txt  observation.txt  observation_batch.txt  summary.txt  task_observation.txt
schemas/: sensitive_implement_gate_result.schema.json
scripts/: smoke_native_web_api.sh  sync-specrail-checks.sh
site/: index.html  robots.txt  sitemap.xml
src/: adapter.rs  adapter_claude.rs  adapter_codex.rs  adapter_common.rs  ai.rs  api.rs  atomic_file.rs  build_info.rs  capture.rs  captured_git.rs  claude_memory.rs  context.rs  db.rs  db_job.rs  db_models.rs  db_pending.rs  db_query.rs  db_worker.rs  dedup.rs  doctor.rs  dream.rs  entity.rs  eval.rs  eval_local.rs  eval_metrics.rs  extraction.rs  extraction_worker.rs  git_evidence.rs  git_trace.rs  git_util.rs  hook_integrity.rs  hook_stdin.rs  identity.rs  ingest.rs  install.rs  lib.rs  log.rs  main.rs  mcp.rs  memory.rs  (+34 more)
templates/: issue_bug.md  issue_feature.md  product_spec.md  tasks.md  tech_spec.md
tests/: api_public.rs  bench_fixtures.rs  benchmark.rs  e2e_eval.rs  install_status.rs  rate_limit.rs  rule_enforcement_fixtures.rs  search_latency_benchmark.rs  sessionstart_k_sweep.rs  vector_benchmark.rs
(+1557 files in other folders)
