[package]
name = "remem-ai"
version = "0.3.4"
edition = "2021"
description = "Persistent memory for Claude Code — single binary, zero subprocesses"
license = "MIT"
repository = "https://github.com/majiayu000/remem"
homepage = "https://github.com/majiayu000/remem"
readme = "README.md"
keywords = ["claude-code", "memory", "mcp", "ai", "persistent-memory"]
categories = ["command-line-utilities", "database"]
exclude = ["eval/locomo/locomo10.json", "eval/locomo/results/", "docs/", "SPEC-*.md"]

[lib]
name = "remem"

[[bin]]
name = "remem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
axum = { version = "0.8.8", features = ["json"] }
tower-http = { version = "0.6.8", features = ["cors"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
