[package]
name = "remem-ai"
version = "0.5.87"
edition = "2021"
description = "Persistent memory for Claude Code and Codex — single binary, automatic context"
license = "MIT"
repository = "https://github.com/majiayu000/remem"
homepage = "https://github.com/majiayu000/remem"
readme = "README.md"
keywords = ["claude-code", "codex", "memory", "mcp", "ai"]
categories = ["command-line-utilities", "database"]
exclude = [
  "eval/locomo/locomo10.json",
  "eval/locomo/results/",
  "eval/local/results/",
  "plan/",
  "docs/",
  "SPEC-*.md",
]

[lib]
name = "remem"

[[bin]]
name = "remem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
axum = { version = "0.8.8", features = ["json"] }
getrandom = "0.3"
toml_edit = "0.22"
libc = "0.2"
sha2 = "0.10"
ring = "0.17"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[profile.release]
opt-level = "z"
lto = true
strip = true
