[package]
name = "remem-ai"
version = "0.5.208"
edition = "2021"
description = "Local-first coding agent memory for Claude Code and OpenAI Codex"
license = "MIT"
repository = "https://github.com/majiayu000/remem"
homepage = "https://majiayu000.github.io/remem/"
readme = "README.md"
keywords = ["claude-code", "codex", "memory", "mcp", "agent-memory"]
categories = ["command-line-utilities", "development-tools"]
exclude = [
  "eval/locomo/locomo10.json",
  "eval/locomo/results/",
  "eval/local/results/",
  "plan/",
  "docs/",
  "SPEC-*.md",
]

[lib]
name = "remem"

[[bin]]
name = "remem"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive", "string"] }
rusqlite = { version = "0.32", features = ["bundled-sqlcipher-vendored-openssl", "backup"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
regex = "1"
regex-lite = "0.1"
chrono = { version = "0.4", features = ["serde"] }
dirs = "6"
anyhow = "1"
fs2 = "0.4"
tokio = { version = "1", features = ["full"] }
rmcp = { version = "0.15", features = ["server", "transport-io", "macros"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
axum = { version = "0.8.8", features = ["json"] }
getrandom = "0.3"
toml_edit = "0.22"
libc = "0.2"
sha2 = "0.10"
ring = "0.17"
fastembed = { version = "5.17.2", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries-rustls-tls"], optional = true }

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }

[features]
default = ["local-onnx"]
local-onnx = ["dep:fastembed"]

[profile.release]
opt-level = "z"
lto = true
strip = true
